--- a/SecondLesson/CarRent/CarRent/CarRent.csproj
+++ b/SecondLesson/CarRent/CarRent/CarRent.csproj
@@ -45,11 +45,12 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="Cars.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="Maintenance.cs" />
+    <Compile Include="Rent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CarRent.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="UserRent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
