--- a/SecondLesson/CarRent/CarRent/CarRent.csproj
+++ b/SecondLesson/CarRent/CarRent/CarRent.csproj
@@ -44,13 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
-    <Compile Include="Cars.cs" />
+    <Compile Include="Cars_park.cs" />
+    <Compile Include="Cars_ParkRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Maintenance.cs" />
     <Compile Include="Rent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
