--- a/SecondLesson/CarRent/CarRent/CarRent.csproj
+++ b/SecondLesson/CarRent/CarRent/CarRent.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Car.cs" />
     <Compile Include="Cars_park.cs" />
     <Compile Include="Cars_ParkRepository.cs" />
+    <Compile Include="Car_ParkFacade.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Maintenance.cs" />
     <Compile Include="Rent.cs" />
