--- a/ForthLesson/Leo-sprint/SessionTest/SessionTest.csproj
+++ b/ForthLesson/Leo-sprint/SessionTest/SessionTest.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
