--- a/ForthLesson/Leo-sprint/WebApplication1/appsettings.Development.json
+++ b/ForthLesson/Leo-sprint/WebApplication1/appsettings.Development.json
@@ -1,10 +1,3 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+  "mongoconnectionstring": "mongodb+srv://dbAdmin:alLq0JUnZVtrPpK6@cluster0-wqq1j.mongodb.net/LOD?retryWrites=true"
 }
