--- a/ForthLesson/Leo-sprint/WebApplication1/appsettings.json
+++ b/ForthLesson/Leo-sprint/WebApplication1/appsettings.json
@@ -1,15 +1,3 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }
+  "mongoConnectionString": "mongodb+srv://Admin:123456q@tanya-wyba6.mongodb.net/test?retryWrites=true"
 }
